--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,76 @@
 @import "tailwindcss";
 
+:root {
+  --primary-background: #f9f5e3;
+  --success: #10b981;
+  --warning: #fbbf24;
+  --error: #ef4444;
+}
+
 * {
-  font-family: "Poppins", sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 
 body {
-  background-color: #f9f5e3;
+  background-color: var(--primary-background);
+}
+
+@theme {
+  /* Define a primary color */
+  --color-primary: #006d5b;
+
+  /* Define a secondary color */
+  --color-secondary: #6ca0dc;
+
+  /* Define a accent color */
+  --color-accent: #f4d35e;
+
+  /* Define a text color */
+  --color-text: #111827;
+
+  /* Define a muted color */
+  --color-muted: #6b7280;
+
+  /* Define a border color */
+  --color-border: #d1d5db;
+
+  /* Define a light color */
+  --color-light: #f9f5e3;
+
+  /* Define a dark color */
+  --color-dark: #5c3d2e;
+
+  /* Define a success color */
+  --color-success: #10b981;
+
+  /* Define a warning color */
+  --color-warning: #fbbf24;
+
+  /* Define a error color */
+  --color-error: #ef4444;
+}
+
+/* toastStyles.css */
+.toast-success {
+  background-color: var(--success) !important;
+  color: white !important;
+  font-weight: bold;
+  border-left: 6px solid #1e7e34;
+  box-shadow: 0 0 10px rgba(0, 255, 0, 0.2);
+}
+
+.toast-error {
+  background-color: var(--error) !important;
+  color: white !important;
+  font-weight: bold;
+  border-left: 6px solid #bd2130;
+  box-shadow: 0 0 10px rgba(255, 0, 0, 0.2);
+}
+
+.toast-warning {
+  background-color: var(--warning) !important;
+  color: black !important;
+  font-weight: bold;
+  border-left: 6px solid #e0a800;
+  box-shadow: 0 0 10px rgba(255, 193, 7, 0.2);
 }
